--- a/src/app.css
+++ b/src/app.css
@@ -2,5 +2,8 @@
 
 :root {
   --header-height: 8rem;
-  --body-height: calc(100vh - var(--header-height))
+  --header-height-mobile: 5rem;
+  --body-height: calc(100vh - var(--header-height));
+  --primary: #333333;
+  color: #333333;
 }
