--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,8 @@
 :root {
   --header-height: 8rem;
   --header-height-mobile: 5rem;
+  --configurator-banner-height: 3rem;
+  --configurator-banner-height-mobile: 2rem;
   --body-height: calc(100vh - var(--header-height));
   --primary: #333333;
   color: #333333;
