--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,7 @@
   --header-height: 8rem;
   --header-height-mobile: 4rem;
   --configurator-banner-height: 3rem;
-  --configurator-banner-height-mobile: 2rem;
+  --configurator-banner-height-mobile: 2.5rem;
   --body-height: calc(100vh - var(--header-height));
   --body-height-mobile: calc(100vh - var(--header-height-mobile));
   --primary: #333333;
@@ -14,4 +14,10 @@
 
 body {
   margin: 0;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
