--- a/src/app.css
+++ b/src/app.css
@@ -3,17 +3,20 @@
 :root {
   --header-height: 8rem;
   --header-height-mobile: 4rem;
-  --configurator-banner-height: 3rem;
+  --configurator-banner-height: 2.5rem;
   --configurator-banner-height-mobile: 2.5rem;
-  --body-height: calc(100vh - var(--header-height));
+  --body-height: calc(100vh - var(--header-height) - var(--configurator-banner-height));
   --body-height-mobile: calc(100vh - var(--header-height-mobile));
-  --primary: #333333;
-  color: #333333;
-
+  --text-color: #333333;
+  --primary: #94A89A;
+  --bg-color: #F8F9F9;
 }
 
 body {
   margin: 0;
+  color: var(--text-color);
+  background: var(--bg-color);
+
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
