--- a/src/app.css
+++ b/src/app.css
@@ -17,6 +17,7 @@ body {
   margin: 0;
   color: var(--text-color);
   background: var(--bg-color);
+  font-family: 'Raleway', sans-serif;
 
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -28,4 +29,13 @@ body {
 
 p {
   font-size: 1rem;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
